将common-auth-api合并入auth项目, 统一管理发布